--- a/css/main.css
+++ b/css/main.css
@@ -1,129 +1,156 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: Inter, sans-serif;
 }
 
 body {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 100vw;
-    height: 100vh;
-    background-color: rgba(169, 169, 169, 0.65);
+    background: #47289d;
 }
 
 .wrapper {
-    max-width: 1400px;
+    position: relative;
     width: 100%;
     height: 100%;
     display: flex;
+    align-content: center;
     justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    gap: 0 15px;
 }
 
-button {
-    padding: 10px 20px;
-    border-radius: 10px;
-    font-weight: 600;
-    font-size: 18px;
-    color: white;
-    border: none;
-    transition: 0.4s;
+#card {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 15px;
+    margin: 40px 15px;
 }
 
-button:hover {
-    transform: scale(0.95);
+.card {
+    position: relative;
+    width: 350px;
+    height: 450px;
+    background: #000;
+    border-radius: 18px;
+    overflow: hidden;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, .2);
 }
 
-#show-btn {
-    background-color: darkmagenta;
+.poster {
+    position: relative;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
 }
 
-#show-table {
-    background-color: darkslateblue;
+.poster::before {
+    content: '';
+    position: absolute;
+    bottom: -45%;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    transition: .3s;
 }
 
-.box {
-    margin-top: 60px;
-    background-color: gray;
-    border-radius: 20px;
-    width: 60%;
+.card:hover .poster::before {
+    bottom: 0;
+}
+
+.poster img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transition: .3s;
+}
+
+.card:hover .poster img {
+    transform: scale(1.1);
+}
+
+.details {
+    position: absolute;
+    bottom: -100%;
+    left: 0;
+    width: 100%;
+    height: auto;
+    padding: 1.5em 1.5em 2em;
+    background: rgba(0, 0, 0, 0.49);
+    backdrop-filter: blur(16px) saturate(120%);
+    transition: .3s;
+    color: #fff;
+    z-index: 2;
+}
+
+.card:hover .details {
+    bottom: 0;
+}
+
+.details h2,
+.details h3 {
+    font-weight: 700;
+}
+
+.details h2 {
+    font-size: 1.5em;
+    margin-bottom: 5px;
+}
+
+.details h3 {
+    font-weight: 400;
+    font-size: 1em;
+    margin-bottom: 10px;
+    opacity: .6;
+}
+
+.details .rating {
+    position: relative;
+    margin-bottom: 15px;
     display: flex;
-    justify-content: center;
+    gap: .25em;
+}
+
+.rating {
+    display: flex;
+    justify-content: space-between;
     align-items: center;
-    padding: 40px 0;
 }
 
-#table {
-    display: none;
+.details .rating span {
+    margin-left: 0.25em;
 }
-
-table, th, td {
-    border: 1px solid #000;
-    border-collapse: collapse;
-}
-
-th, td {
-    padding: 8px 16px;
-    color: white;
-    text-align: center;
-    font-size: 18px;
-}
-
-.link {
+.rating a {
+    color: #0e2dcc;
     text-decoration: none;
-    color: rebeccapurple;
+    font-size: 16px;
+    font-weight: 600;
 }
 
-.show-chart-modal{
-    position: fixed;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    background-color: rgba(0, 0, 0, 0.6);
-    z-index: 100;
-    display: none;
-    justify-content: center;
-    align-items: center;
+.details .desc {
+    color: #fff;
+    opacity: .8;
+    line-height: 1.5em;
+    margin: 8px 0;
 }
 
-.show-chart{
-    position: fixed;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    background-color: rgba(0, 0, 0, 0.6);
-    z-index: 1000;
-    display: none;
-    justify-content: center;
-    align-items: center;
+.desc {
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 8;
 }
 
-.modal{
-    background-color: #e6ecf0;
-    padding: 10px 0 20px 0;
-    border-radius: 10px;
-    width: 1200px;
-    text-align: center;
+.details .cast h3 {
+    margin-bottom: .5em;
 }
-
-.top{
-    display: flex;
-    justify-content: flex-end;
-}
-
-.top .close-modal, .close {
-    cursor: pointer;
-    padding: 0 20px;
-    font-size: 20px;
-}
-
-.body-modal h2{
-    letter-spacing: 2px;
-    margin-top: 10px;
-    margin-bottom: 30px;
-}
-
-
